Painted area blinks in Weight Paint mode when the mesh is rigged (Blender 2.8.0 RC 1) #66811

Closed
opened 2019-07-12 22:40:21 +02:00 by Kei Muratagawa · 10 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error

blinking_in_weight_paint.mp4

When a mesh has vertex groups and is rigged, I can't paint the vertex group in Weight Paint mode.

While dragging the cursor, the painted area just blinks and has no effect.

Exact steps for others to reproduce the error

Dance_Robot_001.blend

  • Select the rigged mesh and choose an vertex group
  • Go to Weight Paint mode

Just paint with any brush (and take no effect)

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** [blinking_in_weight_paint.mp4](https://archive.blender.org/developer/F7603932/blinking_in_weight_paint.mp4) When a mesh has vertex groups and is rigged, I can't paint the vertex group in Weight Paint mode. While dragging the cursor, the painted area just blinks and has no effect. **Exact steps for others to reproduce the error** [Dance_Robot_001.blend](https://archive.blender.org/developer/F7603947/Dance_Robot_001.blend) - Select the rigged mesh and choose an vertex group - Go to Weight Paint mode # Just paint with any brush (and take no effect)
Author

Added subscriber: @muratagawa

Added subscriber: @muratagawa
Kei Muratagawa changed title from Painted area blinks and cannot paint in Weight Paint mode when the mesh is rigged (Blender 2.8 RC 1) to Painted area blinks and cannot paint in Weight Paint mode when the mesh is rigged (Blender 2.8.0 RC 1) 2019-07-12 22:41:19 +02:00
Member

Added subscribers: @Jeroen-Bakker, @lichtwerk

Added subscribers: @Jeroen-Bakker, @lichtwerk
Jeroen Bakker was assigned by Philipp Oeser 2019-07-14 19:21:40 +02:00
Member

Two issues that I see here:
(1) you have vertex selection masking for painting turned ON {F7608477}
This will restrict the influence of your strokes to selected vertices, you can either select more vertices [the ones in the leg], or disable this option alltogether.
This one is not a bug.

(2) the flickering in your file is somehow caused by screen space reflections (this file is in lookdev viewport shading with weightpaint overlay)
This is not happening if screen space reflections are turned OFF.
This is not happening in solid viewport shading with weightpaint overlay.
If screen space reflections are turned on, pretty much everything (painting strokes, selecting vertex groups or bones, ...) will somehow invalidate the overlay and only orbiting/zooming the viewport will bring it back...
This one is a bug, and I would kindly ask @Jeroen-Bakker? to have a look (feel free to reassign if this is not for you...).

Two issues that I see here: **(1) you have `vertex selection masking for painting` turned ON {[F7608477](https://archive.blender.org/developer/F7608477/T66811.png)}** This will restrict the influence of your strokes to selected vertices, you can either select more vertices [the ones in the leg], or disable this option alltogether. This one is not a bug. **(2) the flickering in your file is somehow caused by screen space reflections (this file is in `lookdev` viewport shading with weightpaint overlay)** This is not happening if screen space reflections are turned OFF. This is not happening in `solid` viewport shading with weightpaint overlay. If screen space reflections are turned on, pretty much everything (painting strokes, selecting vertex groups or bones, ...) will somehow invalidate the overlay and only orbiting/zooming the viewport will bring it back... This one is a bug, and I would kindly ask @Jeroen-Bakker? to have a look (feel free to reassign if this is not for you...).
Philipp Oeser changed title from Painted area blinks and cannot paint in Weight Paint mode when the mesh is rigged (Blender 2.8.0 RC 1) to Painted area blinks in Weight Paint mode when the mesh is rigged (Blender 2.8.0 RC 1) 2019-07-14 19:22:05 +02:00
Author

Thanks for your advice.
I have forgot "vertex selection masking" was turned on.

FYI, the second problem (flickering) doesn't occur in the former beta version. (I'm using 2.8.74 - (2019-07-05 06:13, hash: 66684bdff3))
I think it is a bug as you suggested.

Thanks for your advice. I have forgot "vertex selection masking" was turned on. FYI, the second problem (flickering) doesn't occur in the former beta version. (I'm using 2.8.74 - (2019-07-05 06:13, hash: `66684bdff3`)) I think it is a bug as you suggested.
Member

Issue is introduced by 484794ce67
EEVEE now uses a 'warm-up' sample when SSR is enabled. In the viewport these were 2 samples... I added a patch for review that fixes this.

Issue is introduced by 484794ce67 EEVEE now uses a 'warm-up' sample when SSR is enabled. In the viewport these were 2 samples... I added a patch for review that fixes this.
Jeroen Bakker removed their assignment 2019-07-16 13:25:45 +02:00
Clément Foucault was assigned by Jeroen Bakker 2019-07-16 13:25:45 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

We have researched in more depth.

TAA will make a copy of the depth buffer from the first sample. This depth buffer is from taken from the actual position of the viewpoint. (other samples shift this for anti aliasing). As SSR will reset the first 2 samples the depth buffer seems to be overwriten. It is unclear if this is related to the incorrect matrix of the viewpoint or that the incorrect buffer is being used for copy-ing. Discussed online that I will assign it to @fclem

We have researched in more depth. TAA will make a copy of the depth buffer from the first sample. This depth buffer is from taken from the actual position of the viewpoint. (other samples shift this for anti aliasing). As SSR will reset the first 2 samples the depth buffer seems to be overwriten. It is unclear if this is related to the incorrect matrix of the viewpoint or that the incorrect buffer is being used for copy-ing. Discussed online that I will assign it to @fclem

This issue was referenced by 687f1df5db

This issue was referenced by 687f1df5dbe256cd2f381350ad81526970595ee3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Fixed in RC2. Thanks {icon smile-o}

Fixed in RC2. Thanks {icon smile-o}
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66811
No description provided.