Fix T66811 Eevee: Flickering in weight paint mode

This was caused by TAA offset being computed as the 2nd sample even if the
sampling was reset afterwards.

The fix is to update the matrices after any potential reset.